src/objects/skuid__Image__c.object
<CustomObject>
    <fields>
        <fullName>skuid__AttachmentId__c</fullName>
        <label>AttachmentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__NeedsRecompute__c</fullName>
        <label>Needs Recompute</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>skuid__Url__c</fullName>
        <description>Url for viewing/downloading this File.</description>
        <formula>&apos;/servlet/servlet.FileDownload?file=&apos; &amp; skuid__AttachmentId__c</formula>
        <label>Url</label>
        <type>Text</type>
    </fields>
    <label>File</label>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Files</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>